Add code to review

--- a/src/sw/MDK-ARM/SmartHome.uvprojx
+++ b/src/sw/MDK-ARM/SmartHome.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F446xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc; ../Drivers/STM32F4xx_HAL_Driver/Inc; ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy; ../Drivers/CMSIS/Device/ST/STM32F4xx/Include; ../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Core/Inc;  ../Drivers/STM32F4xx_HAL_Driver/Inc;  ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;  ../Drivers/CMSIS/Device/ST/STM32F4xx/Include;  ../Drivers/CMSIS/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -507,6 +507,26 @@
               <FileName>TextBox.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\Core\Src\TextBox.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>EventManager.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Core\Src\EventManager.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TemperatureSensor.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Core\Src\TemperatureSensor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>SensorObserver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\SensorObserver.h</FilePath>
+            </File>
+            <File>
+              <FileName>Sensor_Driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\Sensor_Driver.c</FilePath>
             </File>
           </Files>
         </Group>
