--- a/src/sw/MDK-ARM/SmartHome.uvprojx
+++ b/src/sw/MDK-ARM/SmartHome.uvprojx
@@ -138,7 +138,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2V8M.DLL</Flash2>
-          <Flash3></Flash3>
+          <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -189,7 +189,7 @@
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
-            <useUlib>1</useUlib>
+            <useUlib>0</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
@@ -313,7 +313,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -322,13 +322,13 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>3</wLevel>
+            <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>5</v6Lang>
+            <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
@@ -494,11 +494,6 @@
               <FilePath>..\Core\Src\GUIBuilder.cpp</FilePath>
             </File>
             <File>
-              <FileName>State.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\Core\Src\State.cpp</FilePath>
-            </File>
-            <File>
               <FileName>StateManager.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\Core\Src\StateManager.cpp</FilePath>
@@ -519,14 +514,34 @@
               <FilePath>..\Core\Src\TemperatureSensor.cpp</FilePath>
             </File>
             <File>
-              <FileName>SensorObserver.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Core\Inc\SensorObserver.h</FilePath>
-            </File>
-            <File>
               <FileName>Sensor_Driver.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\Sensor_Driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>Renderable.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\Renderable.h</FilePath>
+            </File>
+            <File>
+              <FileName>SensorListener.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\SensorListener.h</FilePath>
+            </File>
+            <File>
+              <FileName>Updatable.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\Updatable.h</FilePath>
+            </File>
+            <File>
+              <FileName>MainMenuState.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Core\Src\MainMenuState.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>MainMenuState.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\MainMenuState.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -691,8 +706,8 @@
   <RTE>
     <apis/>
     <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="4.3.0" condition="CMSIS Core">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="4.5.0"/>
+      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.4.0" condition="ARMv6_7_8-M Device">
+        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.7.0"/>
         <targetInfos>
           <targetInfo name="SmartHome"/>
         </targetInfos>
